--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,24 @@
 /* write your override styles here */
+#wall .tag-1 {
+    display: none;
+  }
+
+  div#wall{
+    position: relative;
+  }
+  div#wall #tag-3.slick.wicked{
+    height: 15rem;
+    position: absolute;
+    top: 1rem;
+    left: 4rem;
+  }
+
+
+  #wall div#tag-4 {
+    z-index: 4;
+    background-color: #000;
+  }
+
+#wall:nth-of-type(2)#tag2 {
+    background-color: red;
+}
